# sentinel

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sentinel/: __init__.py  __main__.py  analysis.py  checks.py  cli.py  collection.py  config.py  impact.py  models.py  policy.py  redaction.py  report.py
tests/: test_analysis.py  test_checks.py  test_cli.py  test_config.py  test_impact.py  test_policy.py  test_redaction.py  test_report.py
